@@ -380,7 +380,10 @@ Cancels the current command.
 Exits from the program (or from the help viewer or the file browser).
 .TP
 .B writeout
-Writes the current buffer to disk.
+Writes the current buffer to disk, asking for a name.
+.TP
+.B savefile
+Writes the current file to disk without prompting or warning.
 .TP
 .B insert
 Inserts a file into the current buffer (at the current cursor position),
