@@ -950,7 +950,10 @@ Cancels the current command.
 Exits from the program (or from the help viewer or the file browser).
 
 @item writeout
-Writes the current buffer to disk.
+Writes the current buffer to disk, asking for a name.
+
+@item savefile
+Writes the current file to disk without prompting or warning.
 
 @item insert
 Inserts a file into the current buffer (at the current cursor position),
